--- a/react/src/sass/master.scss
+++ b/react/src/sass/master.scss
@@ -256,6 +256,10 @@ button {
 	margin: 0 auto;
 	margin-top: 10%;
 
+	.container {
+		margin-top: 2em;
+	}
+
 	.stats-heading {
 		margin-bottom: 0.6em;
 		margin-top: 1.6em;
@@ -412,11 +416,15 @@ button {
 			color: $primaryColor !important;
 		}
 	}
-	#sectStatistics {
-		width: 75vw;
-		// .designer-charts {
-		// 	width: 100%;
-		// }
+	.sect-statistics {
+		width: 50vw;
+		margin-top: 5em;
+
+		.chart-stats {
+			margin-top: 7%;
+			width: 48vw;
+			height: 33vw
+		}
 	}
 
 }
